--- a/server/templates/privacy.html
+++ b/server/templates/privacy.html
@@ -4,7 +4,7 @@
     <base href="." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DanVPN - Простой и быстрый VPN-сервис</title>
+    <title>DanVPN - Privacy Policies</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/navbar.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
