--- a/server/templates/auth.html
+++ b/server/templates/auth.html
@@ -4,7 +4,7 @@
   <base href="." />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DanVPN - Простой и быстрый VPN-сервис</title>
+  <title>DanVPN - Войти</title>
   <link rel="stylesheet" href="/static/css/styles.css">
   <link rel="stylesheet" href="/static/css/navbar.css">
   <link rel="stylesheet" href="/static/css/auth.css">
