--- a/server/templates/pricing.html
+++ b/server/templates/pricing.html
@@ -105,7 +105,8 @@
         <svg class="warning-icon" viewBox="0 0 24 24" width="24" height="24">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15h-2v-2h2v2zm0-6h-2V7h2v4z" />
         </svg>
-        <p>Обратите внимание: Одна конфигурация может быть подключена к нескольким устройствам, однако такие подключения не могут быть
+        <p>Обратите внимание: Одна конфигурация может быть подключена к нескольким устройствам, однако такие подключения
+          не могут быть
           одновременными, поэтому рекомендуется создавать по одной конфигурации на каждое устройство</p>
       </div>
     </div>
@@ -117,11 +118,12 @@
       <h2 class="modal-title"></h2>
       <p class="modal-description"></p>
       <div class="modal-features"></div>
+      <p class="modal-description"></p>
+      <p class="modal-description-tax"></p>
     </div>
   </div>
 
   <h1 style="text-align: center; margin-bottom: 1rem;"> </h1>
-
 
   <footer class="footer">
     <div class="footer-content">
